test/invalid/prop-wrong.js
function setX(obj, val) {
    obj.x = val;
}

setX({ notX: 2 }, 3);
